2010-01-23  Kai Tietz  <kai.tietz@onevision.com>

	* crt/_mingw.h: Add SDK include of sdks/_mingw_ddk.h.

2010-01-14  Kai Tietz  <kai.tietz@onevision.com>

        * tchar.h (PTCHAR, TBYTE, PTBYTE): Added.

2010-01-07  Jonathan Yong  <jon_y@users.sourceforge.net>

	* math.h (sin): Add GCC pure attribute.
	(cos): Ditto.
	(tan): Ditto.
	(sinh): Ditto.
	(cosh): Ditto.
	(tanh): Ditto.
	(asin): Ditto.
	(acos): Ditto.
	(atan): Ditto.
	(atan2): Ditto.
	(exp): Ditto.
	(log): Ditto.
	(log2): Ditto.
	(pow): Ditto.
	(sqrt): Ditto.
	(ceil): Ditto.
	(floor): Ditto.
	(fabs): Ditto.
	(ldexp): Ditto.
	(frexp): Ditto.
	(modf): Ditto.
	(fmod): Ditto.
	(_cabs): Ditto.
	(_hypot): Ditto.
	(_j0): Ditto.
	(_j1): Ditto.
	(_jn): Ditto.
	(_y0): Ditto.
	(_y1): Ditto.
	(_yn): Ditto.
	(j0): Ditto.
	(j1): Ditto.
	(jn): Ditto.
	(y1): Ditto.
	(y2): Ditto.
	(yn): Ditto.
	(finite): Ditto.
	(fpclass): Ditto.
	(__fpclassifyl): Ditto.
	(__fpclassifyf): Ditto.
	(__fpclassify): Ditto.
	(__isnan): Ditto.
	(__isnanf): Ditto.
	(__isnanl): Ditto.
	(__signbit): Ditto.
	(__signbitf): Ditto.
	(__signbitl): Ditto.
	(sinf): Ditto.
	(sinl): Ditto.
	(cosf): Ditto.
	(cosl): Ditto.
	(tanf): Ditto.
	(tanl): Ditto.
	(asinf): Ditto.
	(asinl): Ditto.
	(acosf): Ditto.
	(acosl): Ditto.
	(atanf): Ditto.
	(atanl): Ditto.
	(atan2f): Ditto.
	(atan2l): Ditto.
	(sinhf): Ditto.
	(sinhl): Ditto.
	(coshf): Ditto.
	(coshl): Ditto.
	(tanhf): Ditto.
	(tanhl): Ditto.
	(acosh): Ditto.
	(acoshf): Ditto.
	(acoshl): Ditto.
	(asinh): Ditto.
	(asinhf): Ditto.
	(asinhl): Ditto.
	(atanh): Ditto.
	(atanhf): Ditto.
	(atanhl): Ditto.
	(expf): Ditto.
	(expl): Ditto.
	(exp2): Ditto.
	(exp2f): Ditto.
	(exp2l): Ditto.
	(expm1): Ditto.
	(expm1f): Ditto.
	(expm1l): Ditto.
	(frexpf): Ditto.
	(frexpl): Ditto.
	(ilogb): Ditto.
	(ilogbf): Ditto.
	(ilogbl): Ditto.
	(ldexpf): Ditto.
	(ldexpl): Ditto.
	(logf): Ditto.
	(logl): Ditto.
	(log10f): Ditto.
	(log10l): Ditto.
	(log1p): Ditto.
	(log1pf): Ditto.
	(log1pl): Ditto.
	(log2): Ditto.
	(log2f): Ditto.